chore(fix): fix overflow and maximized issue

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -7,7 +7,7 @@
   z-index: 1090;
   width: 320px;
   height: 320px;
-  overflow: hidden;
+  overflow: visible !important;
   color: #333;
   cursor: default;
   background-color: rgba(255, 255, 255, .92);
@@ -32,11 +32,15 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: unset;
-  height: unset;
+  width: auto;
+  height: auto;
 
   &.photoviewer-modal {
     border-width: 0;
+    border-radius: 0;
+  }
+
+  .photoviewer-header {
     border-radius: 0;
   }
 
@@ -87,6 +91,8 @@
   position: relative;
   z-index: 2;
   height: 30px;
+  border-radius: 5px 5px 0 0; // 6px - 1px
+  overflow: hidden;
 
   .photoviewer-toolbar {
     float: right;
